fixed dark mode for readability

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -841,15 +841,22 @@ input[type="radio"] {
     }
     
     main {
-        background: var(--gray-200);
+        background: var(--gray-900);
     }
     
     p, li {
-        color: var(--gray-300);
+        color: var(--gray-100);
+    }
+    
+    .content-main p,
+    .content-main div,
+    .block-content p,
+    .block-content div {
+        color: var(--gray-100);
     }
     
     .card {
-        background: var(--gray-200);
+        background: var(--gray-800);
         border-color: var(--gray-700);
     }
     
